[package]
description = "Light-weight, read-only version of Sui's file-based keystore."
name        = "af-keys"
version     = "0.14.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="-Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
  # Generate links to definition in rustdoc source code pages
  # https://github.com/rust-lang/rust/pull/84176
  "--generate-link-to-definition",
  "-Zunstable-options",
]

[lints]
workspace = true

[dependencies]
# Public dependencies; a SemVer-breaking bump in one of these must come with a SemVer-breaking bump
# to this crate
# https://rust-lang.github.io/rfcs/3516-public-private-dependencies.html
anyhow        = { version = "1", public = true }
serde         = { version = "1", public = true, features = ["derive"] }
sui-sdk-types = { version = "0.1", public = true, features = ["hash", "serde"] }
sui-crypto    = { version = "0.1", public = true, features = [
  "ed25519",
  "passkey",
  "secp256k1",
  "secp256r1",
  "zklogin",
] }

log        = "0.4"
serde_json = "1"
